@@ -835,8 +835,8 @@ class ModelSQL(ModelStorage):
         getter_fields = [f for f in all_fields
             if f in cls._fields and hasattr(cls._fields[f], 'get')]
 
+        cache = transaction.get_cache()[cls.__name__]
         if getter_fields and cachable_fields:
-            cache = transaction.get_cache()[cls.__name__]
             for row in result:
                 for fname in cachable_fields:
                     cache[row['id']][fname] = row[fname]
@@ -879,13 +879,24 @@ class ModelSQL(ModelStorage):
                 for sub_results in grouped_slice(
                         result, record_cache_size(transaction)):
                     sub_results = list(sub_results)
-                    sub_ids = [r['id'] for r in sub_results]
+                    sub_ids = []
+                    for row in sub_results:
+                        if (row['id'] not in cache
+                                or any(f not in cache[row['id']]
+                                    for f in field_list)):
+                            sub_ids.append(row['id'])
+                        else:
+                            for fname in field_list:
+                                row[fname] = cache[row['id']][fname]
                     getter_results = field.get(
                         sub_ids, cls, field_list, values=sub_results)
                     for fname in field_list:
                         getter_result = getter_results[fname]
                         for row in sub_results:
-                            row[fname] = getter_result[row['id']]
+                            if row['id'] in sub_ids:
+                                row[fname] = getter_result[row['id']]
+                                if transaction.readonly:
+                                    cache[row['id']][fname] = row[fname]
 
         def read_related(field, Target, rows, fields):
             name = field.name
